mobile layout bugfix

--- a/scss/_ActionGrid.scss
+++ b/scss/_ActionGrid.scss
@@ -52,6 +52,13 @@
 		font-size: 1.5rem;
 		text-align: left;
 	}
+
+	// if they insist on using an iphone
+	@media (max-height: 740px) {
+		flex: 1 1 14rem;
+		-webkit-flex: 1 1 14rem;
+		height: 12rem;
+	}
 }
 
 
@@ -68,8 +75,8 @@
 	-webkit-align-items: stretch;
 	align-items: stretch;
 	text-align: center;
-	-webkit-flex: 0 1 20rem;
-	flex: 0 1 20rem;
+	-webkit-flex: 1 1 20rem;
+	flex: 1 1 20rem;
 	background-color: rgba(255,255,255,0.3);
 	box-shadow: 0 5px 20px rgba(0,0,0,0.05), 0 15px 30px -10px rgba(0,0,0,0.3);
 	-webkit-transition: 0.6s;
@@ -81,8 +88,8 @@
 
 	// if they insist on using an iphone
 	@media (max-height: 740px) {
-		flex: 0 1 14rem;
-		-webkit-flex: 0 1 14rem;
+		flex: 1 1 14rem;
+		-webkit-flex: 1 1 14rem;
 		height: 12rem;
 	}
 
